# myLLannotator

./: LICENSE  README.md  annotator.py  filter-proteins.sh  pyproject.toml  simple-ARG-duplication-analysis.R
output/: annotated_data.csv
paper/: annotator.py  simple-ARG-duplication-analysis.R
src/: main.py
src/myllannotator/: main.py
