[project]
name = "myllannotator"
version = "0.1.0"
description = "User-friendly tool for automated annotation of metadata with open-source LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.0",
    "ollama>=0.6.1",
    "pandas>=2.3.3",
    "tqdm>=4.67.1",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["myllannotator/"]

